bug: fixes reselect; feat: disable selected NavLink
  - NavLinks can STYLE the selected link differently
    BUT cannot DISABLE it !
    So I conditionally render Text in place of the already selected NavLink
      so that it will NOT respond to user clicks

    - css *does* have pointer-events: none
      that will DISABLE an <a> link (which is what NavLink makes)
      BUT it also Disables the css pointer property,
        so it PREVENTS the ability set the link to NOT LOOK LIKE a LINK !!
      (The other reason I rolled my own)

  - Implementation using reselect broke the HOME link :-(  )
    Have re-writtin reselect functions to work properly
    And Improved them.
    - Categories includes an exit early to avoid recomputing a bunch of components
      when the current url is not a category Route (or is an invalid category Route)
      Since Categories show on all pages, I'm only interested when on cat Route
      Since garbage URL can match as a category Route, also verify it's not a 404

  - modified:   components/Categories.js
  - modified:   components/Posts.js
  - modified:   index.css

    On branch working_branch_review1

    Fixes #26 Fixes #30

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -145,7 +145,12 @@
     /*color: rgba(0,96,15,.63);*/
     color: rgba(255,255,255,.63);
   }
-
+/*  
+  .selected {
+    unfortunately, this forces a link-like cursor, so it looks clickable
+    pointer-events: none;
+  }
+*/
   .nav .selected, .nav .sort .selected, .nav .category .selected {
     /*color: red;*/
     /*color: rgba(0,96,15, 1);*/
